# qbit-plugin-dl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
appimage/: entrypoint.sh  qbit-plugin-dl.appdata.xml  qbit-plugin-dl.desktop  requirements.txt
scripts/: build-appimage.sh  sync-icons.sh
src/qbit_plugin_dl/: __init__.py  __main__.py  audit.py  audit_clamav.py  catalog.py  categories.py  fetch.py  fix.py  gui.py  install.py  main.py  paths.py  provenance.py  sources.py  updates.py
tests/: conftest.py  http_fakes.py  test_audit.py  test_audit_clamav.py  test_catalog.py  test_categories.py  test_category_fetch.py  test_fetch.py  test_fix.py  test_grouping.py  test_gui_smoke.py  test_install.py  test_paths.py  test_sources.py  test_updates.py  test_version.py
tests/fixtures/: engine_stubs.py  github_contents_official.json
